16. November 2003
-----------------
- Moved several operations to the menu (Kjartan).
- Restructured menus and added project specific menu in case one is active
  (Kjartan).

+ Added per project customizable submission guidelines for issues (Kjartan).
  Requires database update:
    ALTER TABLE project_projects ADD help text;

10. November 2003
-----------------
- Fixed view and create issue categories menu items not showing (Kjartan).
- Fixed #3462: Project module breaks without clean URLs enabled (Kjartan).
- Fixed #3898: Issues query doesn't pass proper parameters to pager() (Kjartan).

+ Added context sensitivity to the 'view issues' menu (Kjartan).
   * Now limits to current project if available.
+ Updated to use new theme system (Kjartan).
+ Added feature #3531: Make searches bookmarkable (Kjartan).
   * The title is now a permalink to the search results.

02. November 2003
-----------------
+ Added status field to releases (Kjartan).
+ Implemented delete function for releases (Kjartan):
    * Releases are never deleted, just marked with status = 0.
    * When adding a version that has been deleted the old version is restored.

- Fixed search (Weitzman).

24. September 2003
------------------
General
- Temporarily disabled file uploads (pending final fileapi).

+ Added a project.css to split style out of the code.
+ Added navigation trail to several pages.

Projects
- Projects are now nodes, with all the benefits that brings: taxonomy, users
  can submit and maintain their own projects, etc.
- Versions have been replaced with releases.

+ Added more data to projects (link to hp, demo, etc).
+ Added project uri: /project/<name>. Uses node->path
+ Added release directory option for projects that don't require file uploads.
+ Added taxonomy support to projects. Limited support in project navigation.
+ Create a better download page when release_directory is used.

Issues (bug reports, etc)
- Updates to issues are no longer saved as node revisions.